removed alert onclick

--- a/index.html
+++ b/index.html
@@ -192,27 +192,27 @@
     <section class="temperature-info">
         <h2>Temperaturen & Wirkstoffe</h2>
 
-        <div class="temp-range" onclick="alert('Niedrige Temperaturen (140–160°C): Mildes, klares High durch THC.')">
+        <div class="temp-range">
             <h3>1. Niedrige Temperaturen (140–160°C)</h3>
             <p><strong>THC (Tetrahydrocannabinol):</strong> 157°C – mildes, klares „High“</p>
             <p><strong>CBD (Cannabidiol):</strong> 160–180°C – beruhigend, stresslindernd</p>
         </div>
 
-        <div class="temp-range" onclick="alert('Mittlere Temperaturen (160–200°C): Entspannende Effekte durch Myrcen.')">
+        <div class="temp-range">
             <h3>2. Mittlere Temperaturen (160–200°C)</h3>
             <p><strong>CBN (Cannabinol):</strong> 185°C – beruhigend, schlaffördernd</p>
             <p><strong>Limonen (Terpen):</strong> 177°C – stimmungsaufhellend, stresslindernd</p>
             <p><strong>Myrcen (Terpen):</strong> 166–168°C – entspannend, verstärkt THC-Wirkung</p>
         </div>
 
-        <div class="temp-range" onclick="alert('Hohe Temperaturen (200–220°C): Schmerzlindernde Effekte durch CBC.')">
+        <div class="temp-range">
             <h3>3. Hohe Temperaturen (200–220°C)</h3>
             <p><strong>CBC (Cannabichromen):</strong> 220°C – entzündungshemmend, schmerzlindernd</p>
             <p><strong>Linalool (Terpen):</strong> 198°C – beruhigend, angstlösend</p>
             <p><strong>Caryophyllen (Terpen):</strong> 199°C – schmerzlindernd, würziger Duft</p>
         </div>
 
-        <div class="temp-range" onclick="alert('Sehr hohe Temperaturen (über 220°C): Energetisierende Effekte durch THCV.')">
+        <div class="temp-range">
             <h3>4. Sehr hohe Temperaturen (über 220°C)</h3>
             <p><strong>THCV (Tetrahydrocannabivarin):</strong> 220–225°C – appetitzügelnd, energetisierend</p>
         </div>
